# Preflight-AI-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README2.md  main.py  pyproject.toml
references/: DB_Architecture.drawio
scripts/: backfill_zep.py  oasis_spike.py  run_pre_demo.py  serve_api.py  test_ontology.py  test_persona_gen.py  test_simulation.py  test_validation.py
src/: auth.py  events.py  paths.py  rate_limit.py  server.py  sim_config.py
src/config/: config.py
src/docs/: USER_MESSAGE_WITH_DOCS_CONTEXT.md
src/endpoints/: .gitignore  briefs.py  chat.py  collections.py  control.py  generation.py  graph.py  preflight_auth.py  runs.py  stream.py  stt.py
src/metrics/: cost.py  diversity.py  judge.py  parquet_sink.py
src/models/: preflight_db.py  siliconflow.py
src/models/cache_redis/: chat_history.py  client.py
src/models/pgsql/: client.py
src/models/s3/: upload_files.py
src/models/supabase_storage/: client.py  upload_files.py  utils.py
src/models/vc_qdrant/: client.py  utils.py
src/rag/: config.py  server.py
src/rag/tools/: __init__.py  code_sandbox.py  files_generation.py  satellites.py  web_search.py
src/schema/: generation_streaming.py
src/schemas/: ontology.py  persona.py  scenario.py  validation_report.py
src/services/: oasis_simulation.py  ontology_generator.py  orchestrated_pipeline.py  persona_generator.py  pipeline.py  validation_agent.py  zep_memory.py  zep_sim_memory.py
src/tools/: embedding.py  tavily.py
tests/: conftest.py  test_auth.py  test_cors.py  test_events.py  test_heartbeat.py  test_idempotency.py  test_model_overrides.py  test_preflight_db.py  test_rate_limit.py  test_runs_endpoint.py
