[project]
name = "backend"
version = "0.1.0"
description = "RAG backend powered by LlamaIndex Workflow + SiliconFlow"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.9",
    "boto3>=1.40.42",
    "fastapi[standard]>=0.117.1",
    "jupyter-client>=8.6.3",
    "llama-index-core>=0.14.0",
    "llama-index-llms-openai-like>=0.5.0",
    "llama-index-readers-file>=0.5.0",
    "llama-index-tools-tavily-research>=0.4.0",
    "psycopg[binary]>=3.2.11",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
    "redis>=6.4.0",
    "requests>=2.32",
    "supabase>=2.9.0",
    "tavily-python>=0.5.0",
    "upstash-redis>=1.4.0",
    "zep-cloud==3.13.0",
    "pyarrow>=24.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "pymupdf>=1.27.2.3",
    "pydantic-settings>=2.14.0",
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
]

[dependency-groups]
# camel-oasis 0.2.5 pins pytest==8.2.0; match it exactly so resolution
# succeeds. pytest-asyncio 0.23 is the highest with that pytest baseline.
dev = [
    "pytest==8.2.0",
    "pytest-asyncio>=0.23,<0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
